@@ -48,8 +48,20 @@
 
 	* Fix sizing calc error in list item homogenizing
 
+2012-05-29 Mike Blumenkrantz
+
+        * Collapsing tree items in genlist now animate properly
+
+2012-05-30 Mike Blumenkrantz
+
+        * Fix even/odd signals for genlist items
+
 2012-05-31 WooHyun Jung
 
 	* child_can_focus should be EINA_FALSE only when all children in the object
 	  tree are not focusable. Before this fix, it was EINA_FALSE when all sub
 	  objects were not focusable. (i.e. didn't check whole object tree)
+
+2012-06-01 Mike Blumenkrantz
+
+        * Re-setting the current mirrored mode state no longer causes a full recalc
